Skip to content

4.0 regression: raw audio encoder crashes

Try to transcode to s16l any codec that is decoded to fl32, e.g.:

vlc -Irc -vv foobar.mpg --no-sout-video --no-sout-spu --sout '#transcode{acodec=s16l}:display'

Assertion failure. Would lead to heap overflow without assertions:

[0000618000060550] main encoder debug: looking for encoder module matching "any": 19 candidates
[0000618000060550] araw encoder debug: samplerate:48000Hz channels:2 bits/sample:16
[0000618000060550] main encoder debug: using encoder module "araw"
[000061d00011f950] main decoder debug: looking for audio decoder module matching "any": 16 candidates
[000061d00011f950] araw decoder debug: samplerate:48000Hz channels:2 bits/sample:16
[000061d00011f950] main decoder debug: using audio decoder module "araw"
vlc: ../../modules/codec/araw.c :802 : Encode:  l'assertion « out->i_buffer >= in->i_buffer » a échoué.
Abandon
1f6c01737fcf528ca35dfa69c4d50d5d9fe733a6 is the first bad commit
commit 1f6c01737fcf528ca35dfa69c4d50d5d9fe733a6
Author: Francois Cartegnie <fcvlcdev@free.fr>
Date:   Tue Jun 26 23:20:18 2018 +0200

    transcode: refactor audio

:040000 040000 c5152017f41843c9fd5c99b776041048ca45460e de02abcecbebaee794ba1f52a36f875819729523 M      modules

Edited by Rémi Denis-Courmont
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information