sout: transcode: ensure audio format=codec on probing

refs #21917