modules/stream_out/transcode/encoder/audio.c
@@ -191,6 +191,8 @@ int transcode_encoder_audio_test( vlc_object_t *p_obj,
         module_unneed( p_encoder, p_module );
     }
 
+    p_encoder->fmt_in.audio.i_format = p_encoder->fmt_in.i_codec;
+
     /* copy our requested format */
     es_format_Copy( p_enc_wanted_in, &p_encoder->fmt_in );
 
